# WaterLevelUnitTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  readme.md
cmake/: FindHIKSDK.cmake  Function.cmake
onnxANDtensorRT/: 水位检测语义分割模型训练与部署.docx
scripts/: extract_frames.py  test_detailed_stitch.ps1  test_highlevel_stitch.ps1
src/: CMakeLists.txt  main.cpp
src/base/: CMakeLists.txt  ThreadPool.h  ThreadSafeQueue.h
src/common/: CMakeLists.txt  ImageSaver.cpp  ImageSaver.h
src/image_process/: CMakeLists.txt  image_process_thread.cpp  image_process_thread.h  water_level_process.cpp  water_level_process.h  water_level_process_new.cpp  water_level_process_new.h
src/model_inference/: BaseInference.cpp  BaseInference.h  CMakeLists.txt  SegmentationInference.cpp  SegmentationInference.h  SingleImageInference.cpp  SingleImageInference.h  WaterLevelPrediction.cpp  WaterLevelPrediction.h
src/sensor/: CMakeLists.txt  HikCamera.cpp  HikCamera.h  ImageSensor.cpp  ImageSensor.h  LocalImage.cpp  LocalImage.h
test/: CMakeLists.txt  test_HIKSDK.cpp  test_HikCamera.cpp  test_ImageSaver.cpp  test_ImageStitch.cpp  test_ImageStitch.h  test_LocalImage.cpp  test_ThreadPool.cpp  test_WaterLevelDataReader.cpp  test_WaterLevelDataWriter.cpp  test_detailed_stitch.cpp  test_folder.cpp  test_highlevel_stitch.cpp  test_inference.cpp  test_log.cpp  test_post_process.cpp
